<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_profile">

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.owlerdev.owler.ui.fragment.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">

        <argument
            android:name="token"
            app:argType="string" />
    </fragment>

    <!-- Calendar Fragment -->
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.owlerdev.owler.ui.fragment.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar" />

    <!-- Day Fragment with argument for date -->
    <fragment
        android:id="@+id/navigation_day"
        android:name="com.owlerdev.owler.ui.fragment.DayFragment"
        android:label="@string/nav_day"
        tools:layout="@layout/fragment_day">
        <argument
            android:name="date"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <!-- Account Settings Fragment -->
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.owlerdev.owler.ui.fragment.AccountSettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_account_settings" />
</navigation>